# DeployUpload

./: .deploy_ignore  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run_tests.py  setup.py  test_deploy_ignore.py  tox.ini
.github/workflows/: test.yml
deployupload/: __init__.py  cli.py  uploader.py
docs/: TESTING.md
examples/: advanced_usage.py  basic_usage.py  test_uploader.py
scripts/: upload.bat  upload.sh
tests/: conftest.py  test_cli.py  test_uploader.py
